# zion

./: .bazelrc  .gitignore  BUILD.bazel  README.txt  WORKSPACE  build_and_run.sh  dem_names.bzl  dems_to_image.py  dems_to_pixel_data.py  heightmap.c  heightmap.cpp  heightmap.hpp  hmply.cpp  hmstl.c  hmstl.cpp  image_to_stl.cpp  libtrix.c  libtrix.h  pipeline.bzl  pixel_data_to_floating_blob.py  pixel_data_to_png.py  simplify.mlx  test_roundtrip_ply.sh
dem/canyonlands/: BUILD.bazel
dem/zion/: BUILD.bazel  zion_dem_names.bzl
dems/: .gitignore  BUILD.bazel  download_all_dems.sh  unzip_all_dems.sh
meshlab/: BUILD.bazel
src/: BUILD.bazel  data_to_png.py  dem_to_data.py  dems_to_pixel_data.py  edit_map.py  heightmap.cpp  heightmap.hpp  hmply.cpp  parse_args.cpp  parse_args.hpp  pixel_data_to_floating_blob.py  ply2stl.cpp
src/common/: heightmap_data.cpp  heightmap_data.hpp  ply.cpp  ply.hpp  stl.cpp
src/finish_mesh/: fill_bottom.cpp  roundtrip_ply.cpp  scale.cpp  trim_bottom.cpp
src/hmm/: cmdline.h  heightmap.cpp  heightmap.h  main.cpp  stl.cpp
src/hmstl/: heightmap.cpp  hmply.cpp  parse_args.cpp  parse_args.hpp
src/trim_stl/: main.cpp
