load("//:dem_names.bzl", "dem_names")
load("//:pipeline.bzl", "pipeline")

genrule(
    name = "pixel_data",
    tools = ["//src:dems_to_pixel_data"],
    outs = ["pixel_data.dat"],
    srcs = ["@dem_{}//:dem_img_{}".format(dem_name, dem_name) for dem_name in dem_names()],
    cmd = """
$(location //src:dems_to_pixel_data) $@ {}
    """.format(" ".join(["$(locations @dem_{}//:dem_img_{})".format(dem_name, dem_name) for dem_name in dem_names()])),
)

genrule(
    name = "png",
    tools = ["//src:pixel_data_to_png"],
    outs = ["height_map.png"],
    srcs = [":pixel_data.dat"],
    cmd ="""
$(location //src:pixel_data_to_png) $< $@ --target_dimension 2000
du -hs $@
""",
)

max_xy_size = 175

decimations = [
    #1,
    #3,
    #5,
    10,
    20,
    #40,
]
num_triangles = [
    #(  500000, "500k"),
    ( 1000000,   "1m"),
    ( 5000000,   "5m"),
    #(10000000,  "10m"),
    #(15000000,  "15m"),
    #(20000000,  "20m"),
    #(30000000,  "30m"),
]
trims = [True, False]

pipeline(decimations, num_triangles, trims, max_xy_size)
