load("//:pipeline.bzl", "run_pipeline")

max_xy_size = 175

num_triangles = [
    (  500000, "500k"),
    ( 1000000,   "1m"),
    ( 5000000,   "5m"),
    (10000000,  "10m"),
    (15000000,  "15m"),
    (20000000,  "20m"),
    (30000000,  "30m"),
]

config = {
    "//dem/zion:merged_dem.tif": {
        'scale': ("1", "1"),
        'masks': [
            {
                'name': 'zion_fullpark',
                'decimations': [1, 20],
                'make_grid_mesh': False,
                'adaptive_meshes': num_triangles,
            },
            {
                "name": "zion_halfpark",
                'bounds': '18927,-1,12329,-1', # important: no spaces!
                'decimations': [1, 20],
                'make_grid_mesh': False,
                'adaptive_meshes': num_triangles,
            },
            {
                "name": "zion_angels",
                'bounds': '25456,27560,23384,25864', # important: no spaces!
                'decimations': [1],
                'make_grid_mesh': True,
                'adaptive_meshes': [],
            },
        ],
    },
    "//dem/canyonlands:merged_dem.img": {
        'scale': ("23.990469902078466", "30.869966636771583"),
        'masks': [
            {
                'name': 'canyonlands',
                'decimations': [1],
                'bounds': '2600,3070,3700,4450', # important: no spaces!
                'make_grid_mesh': True,
                'adaptive_meshes': [],
            },
        ],
    },
}

run_pipeline(config, max_xy_size)
