load(":dem_names.bzl", "dem_names")

# Downlaod all the DEM zip files.
[
    genrule(
        name = "dem_zip_{}".format(dem_name),
        srcs = [],
        outs = ["{}.zip".format(dem_name)],
        cmd = """
wget -q --directory-prefix=$(@D) https://storage.googleapis.com/state-of-utah-sgid-downloads/lidar/zion-np-2016/QL2/DEMs/{}.zip
""".format(dem_name),
    )
    for dem_name in dem_names()
]

# Unzip all the DEMs.
[
    genrule(
        name = "dem_img_{}".format(dem_name),
        srcs = [":dem_zip_{}".format(dem_name)],
        outs = [
            "{}.img".format(dem_name),
            "{}.img.aux.xml".format(dem_name),
            "{}.img.xml".format(dem_name),
        ],
        cmd = """
unzip -q $< -d $(@D)
""".format(dem_name),
        visibility = ["//visibility:public"],
    )
    for dem_name in dem_names()
]
